added year to the title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Summer Camp Activities</title>
+  <title>Summer Camp Activities 2024</title>
   <style>
     body {
       font-family: Arial, sans-serif;
